# quotes_django

./: README.md  pyproject.toml
hw_project/hw_project/: asgi.py  settings.py  urls.py  wsgi.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_details.html  base.html  index.html
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/users/: password_reset.html  signup.html
hw_project/utils/: from_mongo_to_postgres.py
